--- a/styles/variables.css
+++ b/styles/variables.css
@@ -11,5 +11,7 @@
     --subtitle-font-color: #353430;
     --article-title-font-color: #353430;
     --description-font-color: #353430;
+    --corner-color: #353430;
     --rec-visibility: transparent;
+    --link--shadow: #FF8DCB;
 }
