--- a/styles/variables.css
+++ b/styles/variables.css
@@ -14,4 +14,5 @@
     --corner-color: #353430;
     --rec-visibility: transparent;
     --link--shadow: #FF8DCB;
+    --border-hover-color: #32312D66;
 }
