--- a/styles/light.css
+++ b/styles/light.css
@@ -19,4 +19,5 @@
     --corner-color: #353430;
     --rec-visibility: transparent;
     --link--shadow: #FF8DCB;
+    --border-hover-color: #32312D66;
 }
