--- a/styles/style.css
+++ b/styles/style.css
@@ -216,7 +216,6 @@
     display: grid;
     grid-auto-flow: row;
     gap: 10px;
-    height: fit-content;
     margin-top: 10px;
     margin-bottom: 0;
     padding: 0;
@@ -225,6 +224,11 @@
 .picture_grid {
     width: 100%;
     height: 100%;
+    object-fit: cover;
+}
+
+.picture {
+    max-width: 100%;
     object-fit: cover;
 }
 
@@ -276,7 +280,7 @@
     .content_type {
         display: grid;
         grid-template-columns: 1fr 2fr;
-        gap: 20px;
+        gap: 10px;
     }
 
     .block {
@@ -296,14 +300,7 @@
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         gap: 20px;
-        margin-top: 20px;
         padding: 0;
-    }
-
-    .picture_grid {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
     }
 
     .picture:first-of-type {
@@ -317,7 +314,7 @@
         grid-row-end: span 2;
     }
 
-    .picture:nth-of-type(3)  {
+    .picture:nth-of-type(3) {
         grid-row-start: 2;
         grid-row-end: span 2;
     }
@@ -326,7 +323,7 @@
         grid-row-start: 2;
     }
 
-    .picture:nth-of-type(5)  {
+    .picture:nth-of-type(5) {
         grid-column-start: 2;
         grid-column-end: span 2;
     }
