--- a/styles/variables.css
+++ b/styles/variables.css
@@ -5,7 +5,8 @@
 :root {
     --background-image: url("../images/cover-image-light.png");
     --background-color: #FFF1F7;
-    --header-shadow: 4px 4px #FF0070;
+    --header-shadow: 4px 4px #FF8DCB;
+    --header-shadow-wide-screen: 4px 4px #FF0070;
     --title-background-color: #FF8DCB;
     --header-font-color:#FFC2E6;
     --subtitle-font-color: #353430;
