--- a/styles/dark.css
+++ b/styles/dark.css
@@ -14,6 +14,7 @@
     --background-image: url("../images/cover-image-dark.png");
     --background-color: rgb(0 0 40);
     --header-shadow: 4px 4px #FF0070;
+    --header-shadow-wide-screen: 4px 4px #FF0070;
     --title-background-color: #FF0070;
     --header-font-color:#DB00FF;
     --subtitle-font-color: #000028;
@@ -31,6 +32,7 @@
         --background-image: url("../images/cover-image-dark.png");
         --background-color: rgb(0 0 40);
         --header-shadow: 4px 4px #FF0070;
+        --header-shadow-wide-screen: 4px 4px #FF0070;
         --title-background-color: #FF0070;
         --header-font-color:#DB00FF;
         --subtitle-font-color: #000028;
@@ -42,4 +44,3 @@
         --border-hover-color: #FF007066;
     }
 }
-
