--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@
 .header {
     position: relative;
     display: grid;
-    grid-template-rows:  1fr min-content 1fr;
+    grid-template-rows: 1fr min-content 1fr;
     height: 100vh;
     min-height: 668px;
     padding: 10px;
@@ -47,7 +47,6 @@
 
 .header__theme-menu-button:hover {
     border: 1px solid var(--border-hover-color);
-
 }
 
 .header__theme-menu-button:focus {
@@ -69,7 +68,7 @@
     font-weight: 700;
     font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
     line-height: 95.7px;
-    text-shadow: 4px 4px #FF0070;
+    text-shadow: var(--header-shadow);
 }
 
 .main_subtitle {
@@ -141,7 +140,6 @@
     border-radius: 9px;
     box-shadow: 0 0 5px 3px var(--rec-visibility);
     background-color:var(--rec-visibility);
-
 }
 
 .main_content {
@@ -160,7 +158,6 @@
 
 .article_title {
     display: flex;
-
     color: var(--article-title-font-color);
     font-family: 'IBM Plex Mono', sans-serif, monospace;
     font-weight: 700;
@@ -209,6 +206,7 @@
 .picture_block {
     display: flex;
     flex-direction: column;
+    gap: 10px;
     height: fit-content;
 }
 
@@ -216,7 +214,6 @@
     display: grid;
     grid-auto-flow: row;
     gap: 10px;
-    margin-top: 10px;
     margin-bottom: 0;
 }
 
@@ -274,7 +271,7 @@
     .content_type {
         display: grid;
         grid-template-columns: 1fr 2fr;
-        gap: 10px;
+        gap: 20px;
     }
 
     .block {
@@ -287,7 +284,10 @@
         display: flex;
         flex-direction: column;
         gap: 20px;
+    }
 
+    .picture_block {
+        gap: 20px;
     }
 
     .focus_images {
@@ -328,6 +328,9 @@
 }
 
 @media (min-width: 1024px) {
+    .main_title {
+        text-shadow: var(--header-shadow-wide-screen);
+    }
 
     .header {
         padding: 2px 20px 4px 0;
@@ -347,7 +350,6 @@
 
     .main_subtitle {
         width: calc((100vw - 20px - 20px) / 2);
-
     }
 
     .header__theme-menu-list {
@@ -356,8 +358,12 @@
         gap: 10px;
     }
 
-    .article_title {
-        max-width: calc(98vw / 3);
+    .content_type {
+        gap: 10px;
+    }
+
+    .block {
+        gap: 20px;
     }
 
     .three_columns {
