--- a/styles/style.css
+++ b/styles/style.css
@@ -114,7 +114,7 @@
 .decorated-zone::after {
     content: "";
     position: absolute;
-    top: calc(100vh - 34px);
+    bottom: 10px;
     left: 10px;
     width: 25px;
     height: 25px;
@@ -248,7 +248,7 @@
     }
 
     .decorated-zone::after {
-        top: calc(100vh - 44px);
+        bottom: 20px;
         left: 20px;
     }
 
@@ -280,7 +280,7 @@
         gap:20px;
     }
 
-    .three_columns {
+    .article_block_type_why {
         display: flex;
         flex-direction: column;
         gap: 20px;
@@ -336,10 +336,6 @@
         padding: 2px 20px 4px 0;
     }
 
-    .decorated-zone::after {
-        bottom: 20px;
-    }
-
     .header__theme-menu {
         display: flex;
         flex-direction: column;
@@ -366,7 +362,7 @@
         gap: 20px;
     }
 
-    .three_columns {
+    .article_block_type_why {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         gap:20px;
