--- a/styles/style.css
+++ b/styles/style.css
@@ -238,6 +238,10 @@
         font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
     }
 
+    .main_subtitle {
+        width: calc((100% - 20px) / 2);
+    }
+
     .header {
         padding: 20px 20px 20px 0;
     }
@@ -342,10 +346,6 @@
         justify-self: center;
         align-self: start;
         padding-right: 23px;
-    }
-
-    .main_subtitle {
-        width: calc((100vw - 20px - 20px) / 2);
     }
 
     .header__theme-menu-list {
